--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
-		<title>Pokemon Battle-Mode</title>
+		<title>Monster Battle Arena</title>
 		<style>
 html, body, #canvas {
 	margin: 0;
@@ -97,7 +97,7 @@ body {
 
 		<script src="Pokemon Battle-Mode.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"Pokemon Battle-Mode","experimentalVK":false,"fileSizes":{"Pokemon Battle-Mode.pck":65661808,"Pokemon Battle-Mode.wasm":35376577},"focusCanvas":true,"gdextensionLibs":[]};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"Pokemon Battle-Mode","experimentalVK":false,"fileSizes":{"Pokemon Battle-Mode.pck":40504032,"Pokemon Battle-Mode.wasm":35377582},"focusCanvas":true,"gdextensionLibs":[]};
 const GODOT_THREADS_ENABLED = false;
 const engine = new Engine(GODOT_CONFIG);
 
@@ -196,3 +196,4 @@ const engine = new Engine(GODOT_CONFIG);
 		</script>
 	</body>
 </html>
+
